[package]
name = "pchain-world-state"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust", branch = "protocol_v0.5" }
base64url = "0.1.0"
borsh = "0.10.2"
hash-db = "0.16.0"
reference-trie = "0.29.0"
# the newest version is 0.28.0, but reference-trie lib depends on the trait `TrieLayout` in trie-db 0.27.0
trie-db = "=0.27.0"
rand = "0.8.5"
keccak-hasher = "0.16.0"

[dev-dependencies]
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust", branch = "protocol_v0.5", features = [
    "rand_core",
] }
rand_chacha = "0.3.1"
