[package]
name = "pchain-world-state"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.2"
hash-db = "0.16.0"
keccak-hasher = "0.16.0"
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust" }
reference-trie = "0.29.0"
# the newest version is 0.28.0, but reference-trie lib depends on the trait `TrieLayout` in trie-db 0.27.0
trie-db = "=0.27.0"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false

[dev-dependencies]
base64url = "0.1.0"
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust", features = [
    "rand_core",
] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rocksdb = "0.19"
temp-dir = "0.1.11"
criterion = "0.5.1"
